--- a/K-Mean.ipynb
+++ b/K-Mean.ipynb
@@ -881,6 +881,7 @@
     }
    ],
    "source": [
+    "\n",
     "# First, calculate just the means for cleaner plotting\n",
     "cluster_means = rfm.groupby('Cluster')[['Recency', 'Frequency', 'Monetary']].mean().reset_index()\n",
     "\n",
@@ -926,15 +927,15 @@
     }
    ],
    "source": [
-    "\n",
-    "# 1. Calculate the mean values for each cluster to use as a baseline\n",
+    "#13 Create Profile the Customer Segment\n",
+    "# 13a. Calculate the mean values for each cluster to use as a baseline\n",
     "profiles = rfm.groupby('Cluster').agg({\n",
     "    'Recency': 'mean',\n",
     "    'Frequency': 'mean',\n",
     "    'Monetary': 'mean'\n",
     "}).reset_index()\n",
     "\n",
-    "# 2. Define a function to describe the profile based on RFM values\n",
+    "# 13b. Define a function to describe the profile based on RFM values\n",
     "def describe_cluster(row):\n",
     "    # These thresholds are examples; they compare the row to the overall average\n",
     "    avg_r = rfm['Recency'].mean()\n",
@@ -952,7 +953,7 @@
     "    else:\n",
     "        return \"Steady Customers\", \"Average shoppers with predictable behavior.\"\n",
     "\n",
-    "# 3. Apply the profiling\n",
+    "# 13c. Apply the profiling\n",
     "profiles[['Segment Name', 'Description']] = profiles.apply(\n",
     "    lambda x: pd.Series(describe_cluster(x)), axis=1\n",
     ")\n",
@@ -979,8 +980,8 @@
     }
    ],
    "source": [
-    "\n",
     "# Count how many customers are in each segment\n",
+    "\n",
     "segment_counts = rfm['Cluster'].value_counts().sort_index()\n",
     "profiles['Customer Count'] = segment_counts.values\n",
     "\n",
